--- a/application/res/menu/main.xml
+++ b/application/res/menu/main.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu
-  xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/menuitem_sync" android:title="Sync" android:icon="@drawable/ic_menu_refresh"></item>
+  xmlns:android="http://schemas.android.com/apk/res/android"><item android:title="All" android:id="@+id/menuitem_all_contacts" android:icon="@drawable/ic_menu_all_contacts"></item><item android:id="@+id/menuitem_sync" android:title="Sync" android:icon="@drawable/ic_menu_refresh"></item>
     <item android:id="@+id/menuitem_setting" android:title="Setting" android:icon="@android:drawable/ic_menu_preferences"></item>
+    
+    
     
     
 </menu>
